test/negative/metal_no_hxrt_requires_metal/compile.hxml
-cp .
-lib reflaxe.rust
-D reflaxe_rust_profile=portable
-D rust_no_hxrt
-D rust_no_build
-D rust_output=out
-main Main
